<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:screenOrientation="portrait">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent3"
        android:gravity="center"
        android:text="@string/id_card"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstName_field"
        android:text="@string/firstName"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorAccent2"
        />

    <EditText
        android:id="@+id/lastName_field"
        android:text="@string/lastName"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorAccent3"
        />

    <EditText
        android:id="@+id/streetAddress"
        android:text="@string/addressLine1"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorAccent2"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/cityStateZip"
        android:text="@string/addressLine2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorAccent3"/>

    <EditText
        android:id="@+id/DOB_field"
        android:text="@string/DOB"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/colorAccent2"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_width="105dp"
        android:layout_height="65dp"
        android:text="@string/submitButton"
        android:background="@color/colorAccent3"
        android:elevation="4dp"/>

</LinearLayout>